Fixed menu size on mobile

--- a/styles/sass/Partials/_header.scss
+++ b/styles/sass/Partials/_header.scss
@@ -168,7 +168,7 @@ header {
     font-size: 1.8em;
   }
   .menu.active {
-    width: calc(100% - 0.5rem);
+    width: 60%;
   }
 }
 
