--- a/styles/styles.css
+++ b/styles/styles.css
@@ -440,7 +440,7 @@ header {
     font-size: 1.8em;
   }
   .menu.active {
-    width: calc(100% - 0.5rem);
+    width: 60%;
   }
 }
 
